--- a/ui/rl/projects/stats/src/lib/stats.component.html
+++ b/ui/rl/projects/stats/src/lib/stats.component.html
@@ -1,11 +1,12 @@
 <h2>Stats</h2>
 
 <div style="display: flex;flex-direction: row;flex-wrap: nowrap; justify-content: flex-start;align-items: flex-start;gap: 10px;">
-  <div style="flex-grow: 1">
+  <div style="width: 260px;">
     <mat-list role="list">
       <mat-list-item role="listitem" [routerLink]="'songs/most-played-songs'">Most Played Songs</mat-list-item>
       <mat-list-item role="listitem" [routerLink]="'songs/most-wished-songs'">Most Wished Songs</mat-list-item>
       <mat-list-item role="listitem" [routerLink]="'songs/never-wished-songs'">Never Wished Songs</mat-list-item>
+      <mat-list-item role="listitem" [routerLink]="'races/which-bike-won-most'">Which Bike Won Most</mat-list-item>
     </mat-list>
   </div>
   <div style="flex-grow: 3">
